--- a/WebContent/css/estilo.css
+++ b/WebContent/css/estilo.css
@@ -10,9 +10,40 @@ footer {
   bottom: 0;
   color: white;
 }
+p {
+	margin-bottom: 0px;
+}
 .text-aling-center {
 	text-align: center;
 }
 .img-carrousel{
 	max-width: 100%;
+}
+.load {
+	width: 50px;
+	height: 50px;
+}
+.container-load {
+	height: 100vh;
+}
+.img-evento, .hobbies-evento {
+	width:140px;
+}
+.no-rounded {
+	border-radius: 0;
+}
+@media only screen and (min-width: 768px) {
+	.img-evento, .hobbies-evento{
+		width:160px;
+	}
+}
+@media only screen and (min-width: 992px) {
+	.img-evento, .hobbies-evento {
+		width:200px;
+	}
+}
+@media only screen and (min-width: 1200px) {
+	.img-evento, .hobbies-evento {
+		width:280px;
+	}
 }
