--- a/WebContent/css/estilo.css
+++ b/WebContent/css/estilo.css
@@ -32,6 +32,10 @@ p {
 .no-rounded {
 	border-radius: 0;
 }
+.info-evento {
+	padding-left: 0px;
+	padding-right: 25px;
+}
 @media only screen and (min-width: 768px) {
 	.img-evento, .hobbies-evento{
 		width:160px;
@@ -47,3 +51,14 @@ p {
 		width:280px;
 	}
 }
+@media only screen and (max-width: 768px) {
+	.info-evento {
+		margin-left: 16px;
+		margin-top: 16px;
+		padding-left: 15px;
+		padding-rigth: 15px;
+	}
+}
+
+
+
